# materials-studio-agent-toolkit

./: .gitignore  README.md  gui_loop.pl
tools/: __init__.py
tools/ms_agent_toolkit/: README.md  __init__.py  capabilities.py  config.py  pyproject.toml  templates.py
tools/ms_agent_toolkit/adapters/: analysis.py  gui_loop_runner.py  gui_submission.py  materialscript_runner.py  publication.py
tools/ms_agent_toolkit/adapters/result_readers/: __init__.py  castep.py
tools/ms_agent_toolkit/capabilities/: castep.energy.json  castep.geometry_optimization.json  forcite.geometry_optimization.json
tools/ms_agent_toolkit/commands/: common.py  doctor.py  get_gui_loop_status.py  prepare_gui_submission_package.py  publish_to_project_documents.py  read_module_result.py  report_next_step.py  run_materialscript.py
tools/ms_agent_toolkit/config/: toolkit_config.example.json
tools/ms_agent_toolkit/knowledge/: capability_completion_guide.md
tools/ms_agent_toolkit/knowledge/castep/: api_summary.md  example_index.md  parameter_guide.md  result_semantics.md
tools/ms_agent_toolkit/knowledge/forcite/: api_summary.md  example_index.md  parameter_guide.md  result_semantics.md
tools/ms_agent_toolkit/tests/: test_capabilities.py  test_config.py  test_doctor.py  test_gui_loop_runner.py  test_gui_loop_status_command.py  test_gui_submission_contract.py  test_knowledge_layout.py  test_mock_backend_contracts.py  test_publication_contract.py  test_pyproject_metadata.py  test_read_module_result_contract.py  test_report_next_step.py  test_run_materialscript_contract.py  test_templates.py
(+57 files in other folders)
